--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
     "require": {
         "php": ">=7.1.0",
+        "designcise/bitframe": "^1.0.0",
 		"psr/http-server-middleware": "~1.0",
         "php-http/message": "^1.6",
         "php-http/guzzle6-adapter": "^1.1",
